--- a/Appifyours/frontend/android/gradle/wrapper/gradle-wrapper.properties
+++ b/Appifyours/frontend/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https://services.gradle.org/distributions/gradle-8.4-all.zip
-networkTimeout=10000
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+
+# ✅ Compatible with AGP 8.1.4
+distributionUrl=https://services.gradle.org/distributions/gradle-8.3-all.zip
